# IOCrosscheck

./: .gitignore  IO_Crosscheck_PRD.md  README.md  l5x_Library_Reference.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
sandbox-code/: table_sandbox.py
scripts/: create_xlsm_template.py
src/io_crosscheck/: __main__.py  app.py  classifiers.py  l5x_extractor.py  l5x_report.py  l5x_to_crosscheck.py  main.py  models.py  normalizers.py  parsers.py  reports.py  rslogix_bridge.py  strategies.py
src/io_crosscheck/templates/: crosscheck_template.xlsm
tests/: conftest.py  test_classifiers.py  test_end_to_end.py  test_integration.py  test_l5x_to_crosscheck.py  test_normalizers.py  test_parsers.py  test_strategies.py
